--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,13 @@
             "phpunit/dbunit": ">=1.2",
             "phpunit/phpunit-selenium": ">=1.2",
             "phpunit/phpunit-story": "1.0.*"
-	}
+	},
+        "autoload": {
+        "classmap": [
+            "common/components",
+            "common/models",
+            "common/extensions"
+        ]
+    }
 
 }
